--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,159 @@
+appdirs==1.4.3
+apturl==0.5.2
 asgiref==3.4.1
-Django==3.2.6
+attrs==20.3.0
+awscli==1.19.11
+bcrypt==3.2.0
+blessed==1.18.0
+blinker==1.4
+boto3==1.17.11
+botocore==1.20.11
+Brlapi==0.7.0
+cached-property==1.5.2
+cement==2.8.2
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+colorama==0.4.3
+colorful==0.5.4
+command-not-found==0.3
+configobj==5.0.6
+coreapi==2.3.3
+coreschema==0.0.4
+crcmod==1.7
+cryptography==3.4.6
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+defusedxml==0.7.0rc2
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+dj-database-url==0.5.0
+Django==3.1.6
+django-appconf==1.0.4
 django-filter==2.4.0
-djangorestframework==3.12.4
+django-heroku==0.3.1
+django-templated-mail==1.1.1
+djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+djoser==2.1.0
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
+drf-yasg==1.20.0
+duplicity==0.8.12.0
+emoji==1.2.0
+entrypoints==0.3
+Fabric3==1.14.post1
+fasteners==0.14.1
+filelock==3.0.12
+fire==0.4.0
+future==0.16.0
+gpg===1.13.1-unknown
+gunicorn==20.0.4
+httplib2==0.14.0
+idna==2.10
+importlib-metadata==1.5.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==2.11.3
+jmespath==0.10.0
+jsonschema==3.2.0
+keyboard==0.13.5
+keyring==18.0.1
+kombu==5.0.2
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.3.3
+MarkupSafe==1.1.1
+monotonic==1.5
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.9
+paramiko==2.7.2
+pathspec==0.5.9
+pexpect==4.6.0
+Pillow==7.0.0
+pipenv==11.9.0
+prompt-toolkit==3.0.18
+protobuf==3.6.1
+psutil==5.5.1
+psycopg2==2.8.6
+pyasn1==0.4.8
+pycairo==1.16.2
+pycodestyle==2.7.0
+pycparser==2.20
+pycups==1.9.73
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.4.0
+pyparsing==2.4.7
+PyQt5==5.14.1
+pyRFC3339==1.1
+pyrsistent==0.17.3
+pyserial==3.5
+PySocks==1.6.8
+python-apt==2.0.0+ubuntu0.20.4.5
+python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
+python-dotenv==0.15.0
+python3-openid==3.2.0
 pytz==2021.1
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.5
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
+s3transfer==0.3.7
+SecretStorage==2.3.1
+semantic-version==2.8.5
+simplejson==3.16.0
+sip==4.19.21
+six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==4.0.3
 sqlparse==0.4.1
+systemd-python==234
+termcolor==1.1.0
+texttable==1.6.3
+toml==0.10.2
+torbrowser-launcher==0.3.2
+twilio==6.52.0
+ubuntu-advantage-tools==27.0
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.26.3
+usb-creator==0.3.7
+vine==5.0.0
+virtualenv==20.0.17
+virtualenv-clone==0.3.0
+wadllib==1.3.3
+wcwidth==0.2.5
+websocket-client==0.58.0
+whitenoise==5.2.0
+xkit==0.0.0
+yamlloader==0.5.5
+zipp==1.0.0
