--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.2.6
+django-cors-headers==3.8.0
 django-filter==2.4.0
 django-heroku==0.3.1
 djangorestframework==3.12.4
@@ -13,6 +14,7 @@ drf-yasg==1.20.0
 gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
+install==1.3.4
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
