--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 packaging==21.0
 psycopg2==2.9.1
+psycopg2-binary==2.9.1
 pycodestyle==2.7.0
 pyparsing==2.4.7
 pytz==2021.1
